# losh-slitherio

./: README.md
client/: client.pro  main.cpp
description/: description.tex  image.eps
schema/: snake.fbs
server/: CMakeLists.txt  alloc.cpp  alloc.hpp  common.hpp  game.cpp  game.hpp  main.cpp  network.cpp  network.hpp  userdb.cpp  userdb.hpp
